--- a/style.css
+++ b/style.css
@@ -5,29 +5,29 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.header-class {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.header-class img {
   width: 100%;
 }
 
-.aaa .more_inf {
+.header-class .info-link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa
+  .header-class
     {
       text-align: center;
     }
 }
 
-.centered-main-page-element {
+.main-class {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -142,13 +142,13 @@ li >    input[type="text"] {
   width: 226px
 }
 
-button.delete img {
+button.delete-btn img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+button.delete-btn img:hover {
   transform: rotateZ(0);
 }
 
